# UGV

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cfg/: ControlDist.cfg  ControlDist.cfg~
launch/: joy_op.launch.xml~  joy_op.launch~  robotLaunch.launch  robotLaunch.launch~  rosaria_ugv.launch~  ugv_main.launch  ugv_main.launch~  ugv_rosaria.launch  ugv_rosaria.launch~  ugv_sensors.launch  ugv_sensors.launch~
msg/: Int16Array.msg  Int16Array.msg~  test.msg  test.msg~
src/: Control.h  Control.h~  ControlData.cpp  ControlData.cpp~  ControlUtil.cpp  ControlUtil.cpp~  ControlUtil.h~  CurseNode.cpp  CurseNode.h  KeyNode.cpp  SensorNode.cpp  SensorNode.cpp~  SensorNode.h  SensorNode.h~  UGV.h  UGV.h~  UGVData.cpp  UGVUtil.cpp  UGVUtil.cpp~  UGV_main.cpp  UGV_main.cpp~  control_main.cpp  control_main.cpp~  curse.cpp  curse2.cpp  joy_op6-2.cpp~  joy_op6.cpp~  main.cpp  ringBuffer.h~  rng.cpp  rng.cpp~  robotLaunch.launch~  sig_filter2.cpp  sig_filter2.cpp~  sig_filter3.cpp~  signalFilter.h~
